Check connection via jdbc